--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3544,8 +3544,7 @@ input[type="checkbox"].nospace {
 
 
 /* Slideshow */
-
-.blankfull h4 {
+.slideshow h4 {
 	line-height : 48px;
 }
 
@@ -3556,37 +3555,37 @@ input[type="checkbox"].nospace {
 	min-height : 108vh;
 }
 
-.blankfull p {
+.slideshow p {
 	font-size   : 110%;
 	line-height : 25px;
 }
 
-.blankfull.error p {
+.slideshow.error p {
 	font-size   : 20pt;
 	line-height : 25px;
 }
 
-.blankfull.error code, pre {
+.slideshow.error code, pre {
 	font-size   : 12px;
 	line-height : 18px;
 }
 
-.blankfull.error td {
+.slideshow.error td {
 	font-size : 14pt;
 	padding   : 2px;
 }
 
-.blankfull p.bigger {
+.slideshow p.bigger {
 	font-size   : 128%;
 	line-height : 25px;
 }
 
-.blankfull p.smallish {
+.slideshow p.smallish {
 	font-size   : 100%;
 	line-height : 22px;
 }
 
-.blankfull p.smaller {
+.slideshow p.smaller {
 	font-size   : 96%;
 	line-height : 18px;
 }
@@ -4680,7 +4679,7 @@ div.main span.half.smidge, div.main span span.half.smidge {
 	margin-top     : 2px;
 }
 
-.blankfull h4.nospace {
+.slideshow h4.nospace {
 	line-height: 18px;
 }
 
@@ -6711,6 +6710,17 @@ p.reason {
 	text-align: left;
 }
 
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+	margin-top    : 2px;
+	margin-bottom : 2px;
+}
+
+.select2-container .select2-search--inline .select2-search__field {
+	padding     : 1px;
+	margin-top  : 0;
+	margin-left : 0;
+}
+
 .selection {
 	width      : 96% !important;
 }
@@ -6725,9 +6735,20 @@ p.reason {
 .sidenote div.full span.select2-container,
 .sidenote div.full span.select2-selection__rendered,
 .sidenote div.full span.selection {
-	margin         : 0;
-	padding-top    : 0;
-	padding-bottom : 0;
+	margin  : 0;
+	padding : 0;
+}
+
+.sidenote div.full span.select2-container .select2-selection--multiple {
+	padding: 2px;
+}
+
+.select2-container .select2-selection--multiple .select2-selection__rendered {
+	display: inline-block;
+}
+
+.select2-container .select2-selection--multiple .select2-search__field {
+	width: 100%;
 }
 
 .select2-container--default
