Fun little buggies

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2176,16 +2176,6 @@ tr.borderbottom td, tr.borderbottom th {
 	border: 1px solid var(--dark-blue);
 }
 
-.bluebordertop,
-.bluebordertop td,
-.bluebordertop th {
-	border-top: 2px solid var(--dark-blue);
-}
-
-.blueborderright {
-	border-right: 1px solid var(--dark-blue);
-}
-
 .thinborder {
 	border-width        : 1px;
 }
@@ -2307,6 +2297,17 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 .ltborder, .lightborder {
 	border : 1px solid var(--border-gray);
 }
+
+.bluebordertop,
+.bluebordertop td,
+.bluebordertop th {
+	border-top: 2px solid var(--dark-blue);
+}
+
+.blueborderright {
+	border-right: 1px solid var(--dark-blue);
+}
+
 
 .whitebordertop{
 	border-top  : 1px solid var(--background-white);
@@ -4897,6 +4898,11 @@ td.limitthird {
 	white-space : normal;
 }
 
+td.limitthird.nowrap {
+	overflow-x  : hidden;
+	white-space : nowrap;
+}
+
 td.limithalf {
 	width	    : auto;
 	max-width   : 256px;
@@ -6113,10 +6119,16 @@ a.button.padtouchless,
 }
 
 .fullheight {
-	margin-top     : 0;
-	margin-bottom  : 0;
-	padding-top    : 12px !important;
-	padding-bottom : 12px !important;
+	height   : 400px;
+	overflow : auto;
+	border   : 1px solid var(--medium-gray);
+	width    : 99%;
+}
+.quarterheight {
+	height   : 20vh;
+	overflow : auto;
+	border   : 1px solid var(--medium-gray);
+	width    : 99%;
 }
 
 .padvertical {
