--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -353,6 +353,25 @@ img.badgetiny {
 	color            : var(--neutral-gray);
 }
 
+#toprow a.orangetext {
+	color            : var(--medium-orange);
+}
+
+#inbox_count {
+	position         : relative;
+	top              : -24px;
+	font-size        : 9pt;
+	left             : 8px;
+	font-weight      : 600;
+	background-color : var(--dark-red);
+	color            : var(--lightest-yellow);
+	padding-top      : 1px;
+	padding-bottom   : 2px;
+	padding-left     : 4px;
+	padding-right    : 4px;
+	border-radius    : 16px;
+}
+
 #toprow a#push-bell {
 	background-color : var(--background-white);
 	padding          : 4px;
@@ -6728,9 +6747,9 @@ p.reason {
 }
 
 .select2-container .select2-search--inline .select2-search__field {
-	padding     : 1px;
-	margin-top  : 0;
-	margin-left : 0;
+	padding      : 1px;
+	margin-top   : 0;
+	margin-left  : 0;
 }
 
 .selection {
@@ -6747,8 +6766,9 @@ p.reason {
 .sidenote div.full span.select2-container,
 .sidenote div.full span.select2-selection__rendered,
 .sidenote div.full span.selection {
-	margin  : 0;
-	padding : 0;
+	margin       : 0;
+	padding      : 0;
+	padding-left : 2px;
 }
 
 .sidenote div.full span.select2-container .select2-selection--multiple {
