CSS responsiveness titches

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -169,6 +169,9 @@ input[type="number"].blend {
 	border-color : transparent;
 	font-size    : 100%;
 }
+html {
+	width: auto;
+}
 
 body {
 	background-color    : var(--background-blue);
@@ -178,7 +181,6 @@ body {
 	text-align          : left;
 	font-family         : open_sans, Tahoma, Arial, sans-serif;
 	font-size           : 14px;
-	width               : 100%;
 	padding             : 0;
 	margin              : 0;
 }
@@ -426,6 +428,11 @@ p.onesignal-customlink-explanation.medium {
 	padding-bottom : 4px;
 }
 
+#toprow a.fa.smaller, #toprow a.fa.fa-sm {
+	font-size  : 14pt;
+	margin-top : 4px;
+}
+
 #toprow a:hover {
 	color            : var(--darker-blue);
 	background-color : var(--light-yellow);
@@ -643,9 +650,8 @@ div.content a {
 }
 
 #footer {
-	width       : 88%;
-	min-width   : 970px;
-	max-width   : 1536px;
+	width       : 98%;
+    display     : flex;
 	margin      : auto;
 	min-height  : 130px;
 	padding-top : 15px;
@@ -7623,6 +7629,13 @@ span.halffixedflex,
 		font-size: 16px;
 	}
 
+	#toprow a.fa.smaller, #toprow a.fa.fa-sm {
+		font-size   : 14px;
+		margin-top  : 2px;
+		padding-top : 4px;
+		line-height : 24px;
+	}
+
 	#toprow #helpbutton a {
 		font-size   : 1.4em;
 		margin      : 0;
@@ -7702,6 +7715,21 @@ span.halffixedflex,
 
 	.sidenote.logo {
 		display: none;
+	}
+
+	.sidenote span.half {
+		width : 98%;
+	}
+
+	#footer span.leftlinks a {
+		display: block;
+	}
+
+	#footer span.third span {
+		width          : 100%;
+		display        : block;
+		text-align     : right !important;
+		padding-bottom : 8px !important;
 	}
 }
 
