Dance of the demons

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2487,6 +2487,10 @@ td a.white, td a.plain {
 	background-color : var(--lightest-blue);
 }
 
+.green.hover:hover {
+	background-color : var(--dark-green);
+}
+
 .grayhover:hover,
 .greyhover:hover {
 	background-color: var(--light-gray);
