Min entry and max entry as defaults with nulls

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6491,6 +6491,11 @@ h6.padsetting {
 	margin-right : 4px !important;
 }
 
+.ballotshell strong {
+	font-weight : 650 !important;
+	color       : var(--neutral-gray);
+}
+
 .marballot {
 	margin     : .5px !important;
 }
