the monster mash

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3272,8 +3272,9 @@ button.buttonwhite.fa-sm,
 a.buttonwhite.fa-sm,
 a.printbutton,
 .buttonwhite.fa-sm {
-	margin      : 1px;
-	padding     : 4px;
+	display         : inline-flex;
+	align-items     : center;
+	justify-content : center;
 }
 
 a.fa-sm {
@@ -3288,9 +3289,10 @@ span.buttonwhite.fa-smaller,
 button.buttonwhite.fa-smaller,
 a.buttonwhite.fa-smaller,
 .buttonwhite.fa-smaller {
-	margin      : 1px;
-	padding     : 2px;
-	font-size   : 12px;
+	font-size       : 12px;
+	display         : inline-flex;
+	align-items     : center;
+	justify-content : center;
 }
 
 
@@ -3301,13 +3303,12 @@ button.buttonwhite.fa-tiny,
 a.buttonwhite.fa-tiny,
 a.printbutton,
 .buttonwhite.fa-tiny {
-	margin      : 1px;
-	padding     : 1px;
-	padding-left: 2px;
-	font-size   : 10px;
-	line-height : 14px;
-	font-weight : 400;
-	-webkit-text-stroke: .35px white;
+	font-size           : 10px;
+	font-weight         : 400;
+	display             : inline-flex;
+	align-items         : center;
+	justify-content     : center;
+	-webkit-text-stroke : .35px white;
 }
 
 button.buttonwhite.fa-xs,
@@ -6000,6 +6001,14 @@ a.button.padtouchless,
 	padding-left : 8px !important;
 }
 
+.sidenote .flexrow .padleftmore {
+	padding-left : 8px !important;
+}
+
+.sidenote .flexrow .padleft {
+	padding-left : 4px !important;
+}
+
 .padleftmore {
 	padding-left : 16px !important;
 }
@@ -6767,8 +6776,12 @@ p.reason {
 	margin-left  : 0;
 }
 
+.select2-container--default .select2-selection--single .select2-selection__placeholder {
+	font-size: 12px;
+}
+
 .selection {
-	width      : 96% !important;
+	width      : 99% !important;
 }
 
 .selection_text {
@@ -6855,6 +6868,24 @@ li.select2-results__option {
 
 .select2-container--default .select2-results__option .select2-results__option {
   padding-left : .5em;
+}
+
+.smaller .select2-container .select2-selection--single {
+	height: 20px;
+}
+
+.smaller .select2-selection__arrow {
+	height: 20px !important;
+}
+
+.smaller .select2-container--default .select2-selection--single .select2-selection__rendered,
+.smaller .select2-selection__placeholder {
+	line-height: 16px;
+}
+
+.smaller .select2 {
+	font-size : 11px;
+	padding   : 2px;
 }
 
 .splitpage {
@@ -6990,7 +7021,10 @@ td.flex.top,
 }
 
 .row .leftalign,
-.flexrow .leftalign {
+.flexrow .leftalign,
+.sidenote div.flexrow .leftalign,
+.sidenote div.flexrow.leftalign,
+.flexrow.leftalign {
 	justify-content: left;
 }
 
