--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -376,6 +376,7 @@ img.badgetiny {
 
 #toprow a#push-bell {
 	background-color : var(--background-white);
+	color            : var(--border-gray);
 	padding          : 4px;
 }
 
