Hopefully this is better

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -1672,7 +1672,7 @@ tr.yellowrow.rotation th {
 }
 
 th {
-	line-height    : 14px;
+	line-height    : 13px;
 	vertical-align : middle;
 	font-size      : 14px;
 	padding        : 4px;
@@ -7334,6 +7334,13 @@ span.halffixedflex,
 		width: 100%;
 	}
 
+	.tablesorter-header-inner {
+		height      : 1.4em;
+		align-items : flex-start;
+		overflow-y  : hidden;
+		word-break  : break-word;
+	}
+
 	h2 {
 		font-size: 2.2em;
 	}
@@ -7524,6 +7531,13 @@ span.halffixedflex,
 
 	table: {
 		width : 100%;
+	}
+
+	.tablesorter-header-inner {
+		height      : 1.4em;
+		align-items : flex-start;
+		overflow-y  : hidden;
+		word-break  : break-word;
 	}
 
 	h2 {
