--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -407,12 +407,14 @@ p.onesignal-customlink-explanation.medium {
 	color  : var(--dark-red);
 }
 
-#toprow a.greentext {
+#toprow a.greentext,
+#toprow a#push-bell.greentext {
 	color  : var(--medium-green);
 	border : 4px solid var(--dark-green);
 }
 
-#toprow #login-box a.redtext {
+#toprow #login-box a.redtext,
+#toprow a#push-bell.redtext {
 	border          : none;
 	text-decoration : none;
 }
