--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -402,6 +402,7 @@ p.onesignal-customlink-explanation.medium {
 	padding-bottom : 2px;
 }
 
+#toprow a#push-bell.redtext,
 #toprow a.redtext {
 	border : 4px solid var(--dark-red);
 	color  : var(--dark-red);
