--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -414,8 +414,7 @@ p.onesignal-customlink-explanation.medium {
 	border : 4px solid var(--dark-green);
 }
 
-#toprow #login-box a.redtext,
-#toprow a#push-bell.redtext {
+#toprow #login-box a.redtext {
 	border          : none;
 	text-decoration : none;
 }
