--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -700,6 +700,14 @@ p.shorter {
 	line-height   : 1.2em;
 }
 
+td.smaller.doublespace {
+	font-size: 10px;
+}
+
+.doublespace {
+	line-height : 1.4em;
+}
+
 ol {
 	list-style  : decimal;
  	margin-left : 40px;
