--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2513,6 +2513,7 @@ td a.white, td a.plain {
 
 .yellowhover:hover {
 	background-color : var(--light-yellow);
+	color            : var(--dark-gray);
 }
 
 .ltyellowhover:hover {
