--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -108,7 +108,6 @@ input[type="number"] {
 	padding-top      : 6px;
 	padding-bottom   : 6px;
 }
-
 input[type="date"]::-webkit-calendar-picker-indicator {
     margin: 0;
 }
@@ -698,6 +697,13 @@ p.shorter {
 	margin-top    : 4px;
 	margin-bottom : 4px;
 	line-height   : 1.2em;
+}
+
+.awards p {
+	color       : var(--darker-gray);
+	font-family : Times;
+	font-size   : 12pt;
+	margin      : 0;
 }
 
 td.smaller.doublespace {
