Fixed the attaway issue

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4086,7 +4086,7 @@ a.instream {
 
 a.inline {
 	display               : inline !important;
-	font-size             : 14px !important;
+	font-size             : 14px;
 	padding               : 0 !important;
 	margin                : 0 !important;
 	vertical-align        : baseline;
@@ -5018,7 +5018,7 @@ td.limithalf {
 	line-height : 14px;
 }
 
-.required:before {
+.required:after {
 	content: "*";
 }
 
@@ -5052,6 +5052,7 @@ th.small,
 tr.small td,
 tr.small th,
 .small,
+a.small,
 .small th,
 .small td  {
 	font-size : 13px;
@@ -5061,6 +5062,7 @@ td.smallish,
 th.smallish,
 tr.smallish td,
 tr.smallish th,
+a.smallish,
 .smallish,
 .smallish th,
 .smallish td  {
@@ -5074,6 +5076,7 @@ tr.smaller th,
 td.smaller,
 th.smaller,
 tr.smaller td,
+a.smaller,
 .smaller,
 .smaller th,
 .smaller td {
