--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -373,6 +373,10 @@ img.badgetiny {
 	border-radius    : 16px;
 }
 
+.messagebody {
+	line-height: 14pt;
+}
+
 #toprow a#push-bell {
 	background-color : var(--background-white);
 	color            : var(--border-gray);
