--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -6574,11 +6574,6 @@ h6.padsetting {
 	margin: auto;
 }
 
-.optionslider {
-	padding-top    : 2px;
-	padding-bottom : 1px;
-}
-
 /* Pure CSS input checkbox slider */
 
 .switch {
@@ -6587,12 +6582,10 @@ h6.padsetting {
 	width         : 48px;
 	height        : 24px;
 	margin        : auto;
-	margin-top    : 3px;
-	margin-bottom : 2px;
+	margin-top    : 2px;
+	margin-bottom : 1.8px;
 	border        : 1px solid var(--neutral-gray);
-	padding-left  : 1px;
-	padding-top   : 3px;
-	padding-right : 1px;
+	padding-top   : 4px;
 }
 
 .flexrow label:not(.noflex) .switch,
@@ -6612,12 +6605,12 @@ h6.padsetting {
 .flexrow label.switch.smaller,
 .smaller.switch,
 .smaller .switch {
-	flex        : none;
-	padding-top : 4px;
-	width       : 32px;
-	height      : 20px;
+	flex          : none;
+	padding-top   : 4px;
+	width         : 32px;
+	height        : 20px;
+	margin-bottom : 3.8px;
 }
-
 
 .tiny.switch {
 	padding-top    : 2px;
@@ -6632,31 +6625,32 @@ h6.padsetting {
 
 /* The slider */
 .slider {
-	position           : absolute;
-	cursor             : pointer;
-	top                : 0;
-	left               : 0;
-	right              : 0;
-	bottom             : 0;
-	background-color   : var(--medium-gray);
-	transition         : .4s;
-	text-align         : center;
-	padding            : 0;
+	position         : absolute;
+	cursor           : pointer;
+	top              : 0;
+	left             : 0;
+	right            : 0;
+	bottom           : 0;
+	max-width        : 48px;
+	background-color : var(--medium-gray);
+	transition       : .4s;
+	text-align       : center;
+	padding          : 0;
 }
 
 .slider:before {
 	position           : absolute;
-	height             : 20px;
-	width              : 20px;
+	height             : 24px;
+	width              : 40%;
 	left               : 28px;
-	bottom             : 3px;
+	bottom             : 2px;
+	top                : 2px;
 	background-color   : white;
 	-webkit-transition : .4s;
 	transition         : .4s;
 	font-weight        : 600;
 	font-size          : 15px;
 	content            : "N";
-	padding-top        : 2px;
 	color              : var(--medium-gray);
 	vertical-align     : bottom;
 }
@@ -6667,7 +6661,7 @@ h6.padsetting {
 
 .smaller .slider {
 	height         : 24px;
-	width          : 36px;
+	width          : 100%;
 	margin-top     : 0px;
 	margin-bottom  : 0px;
 	padding-top    : 0;
@@ -6676,12 +6670,14 @@ h6.padsetting {
 
 
 .smaller .slider:before {
-	height    : 18px;
-	width     : 16px;
-	left      : 16px;
-	bottom    : 3px;
-	font-size : 14px;
-	padding   : 0;
+	height         : 16px;
+	width          : 46%;
+	left           : 16px;
+	bottom         : 3px;
+	font-size      : 14px;
+	padding        : 0;
+	padding-top    : 2px;
+	padding-bottom : 1px;
 }
 
 .tiny .slider:before {
@@ -6720,6 +6716,24 @@ input:checked + .slider.onred:before {
 }
 
 input:checked + .slider.onred.invert:before {
+	content     : "N";
+}
+
+
+input:checked + .slider.ongold {
+	background-color : var(--medium-yellow);
+}
+
+input:focus + .slider.ongold {
+	box-shadow : 0 0 1px var(--medium-yellow);
+}
+
+input:checked + .slider.ongold:before {
+	content     : "Y";
+	color       : var(--medium-yellow);
+}
+
+input:checked + .slider.ongold.invert:before {
 	content     : "N";
 }
 
