UNsure and unhappy

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3014,6 +3014,12 @@ input[type="submit"].purpletext {
 	color : var(--neutral-gray);
 }
 
+
+.lightgreytext,
+.lightgraytext {
+	color : var(--light-gray);
+}
+
 .graytext.invert,
 .greytext.invert,
 .blacktext {
