--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2999,6 +2999,11 @@ input[type="submit"].purpletext {
 	background-color : var(--dark-bluegreen);
 }
 
+.lightgreentext, .buttonwhite.lightgreentext, .lightgreentextnohover {
+	color        : var(--medium-green);
+	border-color : var(--dark-green);
+}
+
 .greentext, .buttonwhite.greentext, .greentextnohover {
 	color        : var(--dark-green);
 	border-color : var(--darker-green);
