--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3019,10 +3019,9 @@ input[type="submit"].purpletext {
 	color : var(--neutral-gray);
 }
 
-
 .lightgreytext,
 .lightgraytext {
-	color : var(--light-gray);
+	color : var(--medium-gray);
 }
 
 .graytext.invert,
