jpools thing mt

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7083,7 +7083,9 @@ td.flex.top,
 
 .switch,
 .optionslider {
-	box-sizing : unset;
+	box-sizing    : unset;
+	margin-top    : 1.5px;
+	margin-bottom : 1px;
 }
 
 .flexbox {
