--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -4705,16 +4705,14 @@ div.main span.half.smidge, div.main span span.half.smidge {
 	width         : 12.2%;
 	padding-left  : .25%;
 	padding-right : .25%;
-	margin-left   : .25%;
-	margin-right  : .25%;
+	margin        : 0;
 }
 
 .sixsevenths {
 	width         : 82%;
 	padding-left  : .25%;
 	padding-right : .25%;
-	margin-left   : .25%;
-	margin-right  : .25%;
+	margin        : 0;
 }
 
 .seventh.padno,
@@ -6646,6 +6644,7 @@ h6.padsetting {
 .slider {
 	position         : absolute;
 	cursor           : pointer;
+	box-sizing       : border-box;
 	top              : 0;
 	left             : 0;
 	right            : 0;
@@ -6659,16 +6658,17 @@ h6.padsetting {
 
 .slider:before {
 	position           : absolute;
-	height             : 24px;
+	height             : 22px;
 	width              : 40%;
 	left               : 28px;
 	bottom             : 2px;
 	top                : 2px;
+	padding-top        : 2px;
 	background-color   : white;
 	-webkit-transition : .4s;
 	transition         : .4s;
 	font-weight        : 600;
-	font-size          : 15px;
+	font-size          : 18px;
 	content            : "N";
 	color              : var(--medium-gray);
 	vertical-align     : bottom;
@@ -6686,7 +6686,6 @@ h6.padsetting {
 	padding-top    : 0;
 	padding-bottom : 0;
 }
-
 
 .smaller .slider:before {
 	height         : 16px;
