Move to the new email interface because it works

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -420,6 +420,7 @@ p.onesignal-customlink-explanation.medium {
 #toprow #login-box a.redtext {
 	border          : none;
 	text-decoration : none;
+	width           : 95%;
 }
 
 #toprow a.borderright {
