Decidedly random improvement

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3071,6 +3071,10 @@ a.buttonwhite.smallish {
 	line-height    : 12px;
 }
 
+.buttonwhite.smallish.semibold {
+	font-weight    : 600;
+}
+
 .smallbutton.fa,
 .fa.buttonwhite.smallish,
 a.buttonwhite.smallish.fa {
@@ -6553,10 +6557,6 @@ h6.padsetting {
 }
 .marballot.third {
 	width : 30%;
-}
-
-.congress_snake {
-	width : 24%;
 }
 
 .marballot .buttonwhite {
