A lil giftlet to those out there who care

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -2471,6 +2471,18 @@ span.ltborderbottom, a.ltborderbottom, div.ltborderbottom {
 	background-color : transparent;
 }
 
+.white.odd, .plain.odd {
+	background-color : var(--background-white);
+	border-top       : 1px solid var(--border-gray);
+	border-bottom    : 1px solid var(--border-gray);
+}
+
+.white.even, .plain.even {
+	background-color : var(--light-gray);
+	border-top       : 1px solid var(--border-gray);
+	border-bottom    : 1px solid var(--border-gray);
+}
+
 .link-underline {
 	text-decoration : underline dashed var(--neutral-gray);
 }
