--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7592,6 +7592,28 @@ span.halffixedflex,
 
 @media only screen and (max-width: 877px) {
 
+	#toprow a.fa {
+		padding-top : 0px;
+		margin-top  : 0px;
+	}
+
+	#inbox_count {
+		position         : relative;
+		top              : -10px;
+		font-size        : 9pt;
+		left             : -4px;
+		font-weight      : 600;
+		background-color : var(--dark-red);
+		color            : var(--lightest-yellow);
+		padding-top      : 1px;
+		padding-bottom   : 2px;
+		padding-left     : 4px;
+		padding-right    : 4px;
+		border-radius    : 16px;
+		line-height      : 9pt;
+	}
+
+
 	table: {
 		width : 100%;
 	}
@@ -7746,20 +7768,28 @@ span.halffixedflex,
 		font-weight     : 700;
 	}
 
+	#toprow a {
+		margin-top : 0px;
+	}
+
+	#toprow a.padvert {
+		padding-top : 4px !important;
+	}
+
 	#toprow a.fa {
 		font-size: 16px;
 	}
 
 	#toprow a.fa.smaller, #toprow a.fa.fa-sm {
 		font-size   : 14px;
-		margin-top  : 2px;
-		padding-top : 4px;
 		line-height : 24px;
+		margin-top  : 0px;
 	}
 
 	#toprow #helpbutton a {
 		font-size   : 1.4em;
 		margin      : 0;
+		margin-left : 4px;
 		padding     : 4px;
 		height      : auto;
 		width       : auto;
