--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -763,6 +763,14 @@ a {
 	display         : inline-block;
 }
 
+p strong {
+	letter-spacing: .2px;
+}
+
+p a {
+	text-decoration : underline;
+}
+
 a.bluelink {
 	text-decoration : underline !important;
 	color           : var(--dark-blue);
