Responsive design version 1.0

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3012,6 +3012,10 @@ input[type="submit"].purpletext {
 	color : var(--dark-yellow);
 }
 
+.lightyellowtext {
+	color : var(--lightest-yellow);
+}
+
 .bluegreentext{
 	color : var(--dark-bluegreen);
 }
@@ -5667,12 +5671,20 @@ way to fit your requirements.
 
 #nav li a.top_link {
 	display         : block;
-	color           : var(--light-yellow);
+	color           : var(--lightest-yellow);
 	text-decoration : none;
 	font-size       : 15px;
 	cursor          : pointer;
 	width           : 108px;
 	margin-left     : 5px;
+}
+
+#nav li a.top_link span.down.text {
+	display: block;
+}
+
+#nav li a.top_link span.icon.hidden {
+	display: none;
 }
 
 #nav li a.top_link.wide {
@@ -5695,6 +5707,10 @@ way to fit your requirements.
 	width          : 106px;
 	padding-top    : 8px;
 	padding-bottom : 8px;
+}
+
+#nav li a.top_link span.down.icon {
+	display: none;
 }
 
 #nav li a.top_link.wide span.down {
@@ -7828,18 +7844,19 @@ span.halffixedflex,
 	}
 
 	#nav li.top {
-		display: inline-block;
+		display : block;
+		z-index : 100;
 	}
 
 	#nav li a.top_link {
-		width     : 96px;
+		width     : 104px;
 		font-size : 13px;
 	}
 
 	#nav li:hover ul.sub {
 		top   : 30px;
 		left  : 2px;
-		width : 96px;
+		width : 104px;
 	}
 	#nav li a.top_link span.down {
 		padding-top    : 6px;
@@ -7848,7 +7865,7 @@ span.halffixedflex,
 	}
 
 	#nav li:hover ul.sub li a {
-		width     : 92px;
+		width     : 122px;
 		font-size : 12px;
 	}
 
@@ -7890,6 +7907,222 @@ span.halffixedflex,
 		text-align     : right !important;
 		padding-bottom : 8px !important;
 	}
+}
+
+#mobile_search {
+	display: none;
+}
+
+.onlysmall,
+.hamburger {
+	display: none;
+}
+
+@media only screen and (max-width: 600px) {
+
+	#menus {
+		text-align : center;
+		float      : none;
+	}
+
+	#toprow {
+		margin-bottom: 0px;
+	}
+
+	#toprow a.fa {
+		height         : 24px;
+		width          : 24px;
+		margin-right   : 3px;
+		border         : 1px solid var(--neutral-gray);
+		font-size      : 20px !important;
+		padding        : 2px;
+		padding-top    : 3px;
+		text-align     : center;
+		vertical-align : middle;
+	}
+
+	#toprow a.fa-envelope {
+		text-align     : right;
+		padding-top    : 1px;
+		padding-bottom : 2px;
+		font-size      : 16px !important;
+	}
+
+	#helpbutton {
+		display: none;
+	}
+
+	#logo {
+		padding-left : 0px;
+		width        : 44%;
+	}
+
+	#header {
+		min-width: 96px;
+	}
+
+	#wrapper {
+		min-width: 96px;
+	}
+
+	table {
+		table-layout : fixed;
+		word-break   : break-all;
+		word-wrap    : break-word;
+		width        : 100%;
+	}
+
+	#toprow a#tabroom_edlee {
+		display: none;
+	}
+
+	.searchfilter {
+		display: none;
+	}
+
+	#nav li a.top_link {
+	}
+
+	#nav li a.top_link {
+	   width: 48px;
+	}
+
+	#nav li a.top_link span.down {
+		width: 48px;
+		z-index: -1;
+	}
+
+	#nav li a.top_link span.down.text {
+		display : none;
+	}
+
+	#nav li a.top_link span.down.icon {
+		display   : block;
+		font-size : 16px;
+	}
+
+	#mobile_search {
+		display: block;
+	}
+
+	#search {
+		background-color: var(--light-gray);
+	}
+
+	#search input[type="text"] {
+		color: var(--darkest-blue);
+	}
+
+	.main {
+		padding-left : 4px;
+		width        : 98%;
+	}
+
+	.menu {
+		right            : 0px;
+		width            : 66%;
+		display          : none;
+		background-color : var(--light-gray);
+		position         : absolute;
+	}
+
+	ul#tabnav li {
+		font-size   : 10px;
+		margin-left : 4px;
+		padding     : 2px;
+	}
+
+	.mobilehide {
+		display: none;
+	}
+
+	#menus {
+		width      : 85%;
+		text-align : left;
+	}
+
+	.hamburger {
+		display          : block;
+		width            : 15%;
+		text-align       : right;
+	}
+
+	.menuburger {
+		padding-left     : 8px;
+		padding-right    : 8px;
+		margin-top       : 15px;
+		margin-right     : 1px;
+		padding-top      : 8px;
+		padding-bottom   : 8px;
+		background-color : var(--neutral-gray);
+		color            : var(--lightest-yellow);
+	}
+
+	.tabad_carousel {
+		width   : 100%;
+		padding : 0px;
+		margin  : 0px;
+		height  : auto;
+	}
+
+	.tabad_carousel img {
+		width: 100%;
+		height: auto;
+	}
+
+	.carousel.row,
+	.carousel.row.even,
+	.carousel.row.odd,
+	.carousel.row a {
+		height: auto;
+		padding: none;
+	}
+
+	.carousel.row {
+		padding-bottom : 3%;
+		padding-left   : 2px;
+		padding-right  : 2px;
+		border: 1px solid white;
+	}
+
+	.carousel.row a {
+	}
+
+	.menuburger:hover {
+		background-color : var(--medium-gray);
+	}
+
+	div.menu.nothidden {
+		display     : inline-block;
+		z-index     : 500;
+		border-left : 4px solid var(--neutral-gray);
+		margin-top  : 4px;
+	}
+
+	td {
+		font-size: 84%;
+	}
+
+	.onlysmall a:hover {
+		background-color : var(--light-yellow);
+		color            : var(--dark-gray);
+	}
+
+	.onlysmall {
+		margin-top : -8px !important;
+		display    : inline-block;
+	}
+
+	.slick-slide {
+		margin-top  : -12px;
+		height      : auto;
+		padding-top : 0px;
+	}
+
+	.slick-track {
+		margin-top : 22px;
+	}
+
 }
 
 
