One alignment dispute

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -7918,6 +7918,11 @@ span.halffixedflex,
 	display: none;
 }
 
+.flexrow.menuright {
+	text-align : right;
+	flex-flow  : row-reverse;
+}
+
 @media only screen and (max-width: 600px) {
 
 	#menus {
@@ -8024,6 +8029,7 @@ span.halffixedflex,
 		display          : none;
 		background-color : var(--light-gray);
 		position         : absolute;
+		min-height       : 85vh;
 	}
 
 	ul#tabnav li {
@@ -8123,6 +8129,10 @@ span.halffixedflex,
 		margin-top : 22px;
 	}
 
+	.flexrow.menuright {
+		text-align: left;
+		flex-flow  : row;
+	}
 }
 
 
