Mock trial improvement

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -5751,7 +5751,7 @@ way to fit your requirements.
 	display       : block;
 	position      : relative;
 	float         : left;
-	width         : 124px;
+	width         : 100%;
 	margin-bottom : -16px;
 	margin-top    : 0;
 }
@@ -5766,7 +5766,7 @@ way to fit your requirements.
 	text-align      : center;
 	display         : block;
 	font-size       : 14px;
-	width           : 124px;
+	width           : 100%;
 	background      : var(--lightest-yellow);
 	color           : var(--darker-blue);
 	line-height     : 16px;
@@ -5782,7 +5782,7 @@ way to fit your requirements.
 
 #nav li:hover ul.sub li a:hover {
 	font-family     : Raleway-Bold;
-	background		: var(--dark-blue);
+	background		: var(--darker-blue);
 	color			: var(--lightest-yellow);
 	border-color	: var(--dark-gray);
 	margin-bottom   : 0;
@@ -5792,15 +5792,15 @@ way to fit your requirements.
 #nav * ul {
 	left			: 150px;
 	top				: -1px;
-	background		: var(--light-blue);
+	background		: var(--darker-blue);
 	white-space		: nowrap;
-	border-left		: 1px solid var(--dark-blue);
-	border-right	: 1px solid var(--dark-blue);
+	border-left		: 1px solid var(--darker-blue);
+	border-right	: 1px solid var(--darker-blue);
 	width			: 150px;
 	z-index			: 400;
 	height			: auto;
-	border-top		: 1px solid var(--dark-blue);
-	border-bottom	: 1px solid var(--dark-blue);
+	border-top		: 1px solid var(--darker-blue);
+	border-bottom	: 1px solid var(--darker-blue);
 	margin-bottom   : 0;
 }
 
@@ -7865,7 +7865,7 @@ span.halffixedflex,
 	}
 
 	#nav li:hover ul.sub li a {
-		width     : 122px;
+		width     : 100%;
 		font-size : 12px;
 	}
 
@@ -8015,7 +8015,7 @@ span.halffixedflex,
 	}
 
 	#search input[type="text"] {
-		color: var(--darkest-blue);
+		color: var(--darker-blue);
 	}
 
 	.main {
