Friggin OneSignal impromptu overhaul.

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -59,8 +59,6 @@
 	--dark-bluegreen : #159090;
 }
 
-
-
 /* Common page layouts */
 
 textarea,
@@ -320,6 +318,7 @@ img.badgetiny {
 	padding-bottom : 8px;
 	letter-spacing : .2px;
 	margin         : 0;
+	padding-right  : 0;
 }
 
 #toprow a {
@@ -338,7 +337,6 @@ img.badgetiny {
 #toprow a#push-bell.greentext:hover {
 	border-color     : var(--dark-green);
 	background-color : var(--light-green);
-	color            : var(--background-white);
 }
 
 #toprow a#push-bell.redtext:hover {
@@ -383,19 +381,44 @@ img.badgetiny {
 	padding          : 4px;
 }
 
-#push-subscribe, #push-form, #push-impossible, #push-subscribe {
-	float            : right;
-	background-color : var(--lightest-gray);
-	width            : 97%;
+div#push-overlay {
+	width            : 100%;
+	height           : 100vh;
 	text-align       : center;
-	padding          : 8px;
+	background-color : rgba(25, 25, 25, 0.75);
+	position         : absolute;
+	left             : 0;
+	top              : 0;
+	z-index          : 750;
+}
+
+div#push-subscribe {
+	box-sizing       : border-box;
+	white-space      : normal;
+	z-index          : 1000;
+	float            : none;
+	width            : 75%;
+	padding          : 16px;
+	padding-left     : 10%;
+	padding-right    : 10%;
+	background-color : var(--lightest-gray);
+	border           : 1px solid var(--dark-orange);
+	border-radius    : 12px;
+	margin-top       : 5%;
+	margin-left      : auto;
+	margin-right     : auto;
+}
+
+span#push-form, span#push-impossible, span#push-block, span#push-permission {
+	width            : 100%;
+	text-align       : center;
 	margin-top       : -2px;
-	border           : none;
-	border-right     : 1px solid var(--dark-blue);
 }
 
 #toprow-push-box {
-	min-height: 0;
+	min-height     : 0;
+	padding-top    : 16px;
+	padding-bottom : 16px;
 }
 
 p.onesignal-customlink-explanation.medium {
@@ -428,7 +451,7 @@ p.onesignal-customlink-explanation.medium {
 }
 
 #toprow a.fa {
-	font-size      : 16pt;
+	font-size      : 24px;
 	font-weight    : 400;
 	margin-bottom  : 0;
 	padding-top    : 4px;
@@ -458,12 +481,9 @@ p.onesignal-customlink-explanation.medium {
 	border         : none;
 	margin         : 0;
 	padding        : 2px;
-	font-size      : 32px !important;
-	width          : 32px;
-	height         : 32px;
+	font-size      : 32px;
 	text-align     : center;
 	vertical-align : middle;
-	line-height    : 32px;
 }
 
 /* Search box */
@@ -477,6 +497,10 @@ p.onesignal-customlink-explanation.medium {
 	padding          : 0;
 }
 
+#search input[type="text"]#searchtext {
+	width: 100%;
+}
+
 #search input[type="text"],
 #search input[type="number"] {
     background  : none repeat scroll 0 0 transparent;
@@ -485,7 +509,8 @@ p.onesignal-customlink-explanation.medium {
     width       : 76%;
 	font-size   : 16px;
 	display     : inline;
-    margin-left : 2px;
+    margin-left : 4px;
+	margin-top  : 4px;
 }
 
 button:focus {outline:none;}
@@ -3415,10 +3440,11 @@ a.printbutton.buttonwhite {
 
 .main {
 	float            : left;
-	width            : 71%;
+	width            : 77%;
 	background-color : var(--background-white);
 	padding          : 2%;
 	margin           : 0;
+	box-sizing       : border-box;
 	min-height       : 600px;
 	min-height       : 108vh;
 }
@@ -3436,6 +3462,7 @@ a.printbutton.buttonwhite {
 	padding-left   : 1%;
 	padding-right  : 1%;
 	position       : relative;
+	box-sizing       : border-box;
 }
 
 .sideoverlay {
@@ -6100,7 +6127,6 @@ a.button.padtouchless,
 	padding-left : 32px !important;
 }
 
-
 .padrightless {
 	padding-right : 4px !important;
 }
@@ -7415,7 +7441,36 @@ span.halffixedflex,
 	line-height  : normal;
 }
 
+#toprow a#mobile_search {
+	display: none;
+}
+
+@media only screen and (max-width: 1300px) {
+
+	#header {
+		width     : 95%;
+		max-width : 1250px;
+	}
+
+	#wrapper {
+		width     : 95%;
+		max-width : 1250px;
+	}
+
+	.main {
+		width: 72%;
+	}
+
+	.menu {
+		width: 28%;
+	}
+}
+
 @media only screen and (max-width: 1100px) {
+
+	#push-subscribe {
+		right: 12px;
+	}
 
 	table: {
 		width: 100%;
@@ -7496,10 +7551,10 @@ span.halffixedflex,
 
 	#logo {
 		display      : inline-block;
-		width        : 22%;
+		width        : 25%;
 		margin       : 0;
 		padding      : 0;
-		padding-left : 32px;
+		padding-left : 8px;
 	}
 
 	#logo a {
@@ -7604,32 +7659,41 @@ span.halffixedflex,
 	}
 
 	#nav {
-		display     : inline-block;
-		float       : none;
-		margin      : auto;
-		list-style  : none;
-		z-index     : 500;
-		font-size   : 10pt;
-		padding-top : 18px;
+		display         : flex;
+		width           : 100%;
+		justify-content : end;
+		margin          : auto;
+		margin-right    : 12px;
+		list-style      : none;
+		z-index         : 500;
+		font-size       : 8pt;
+		padding-top     : 12pt;
+		padding-bottom  : 0;
 	}
 }
 
-@media only screen and (max-width: 877px) {
+@media only screen and (max-width: 1000px) {
 
-	#toprow a.fa {
-		padding-top : 0px;
-		margin-top  : 0px;
+	#push-subscribe {
+		white-space    : normal;
+		position       : absolute;
+		z-index        : 1000;
+		right          : 6px;
+		float          : none;
+		width          : 75%;
+		border         : 4px solid var(--dark-orange);
+		padding-bottom : 8px;
 	}
 
 	#inbox_count {
 		position         : relative;
 		top              : -10px;
-		font-size        : 9pt;
+		font-size        : 8pt;
 		left             : -4px;
 		font-weight      : 600;
 		background-color : var(--dark-red);
 		color            : var(--lightest-yellow);
-		padding-top      : 1px;
+		padding-top      : 2px;
 		padding-bottom   : 2px;
 		padding-left     : 4px;
 		padding-right    : 4px;
@@ -7683,6 +7747,7 @@ span.halffixedflex,
 		flex-flow   : row nowrap;
 		align-items : center;
 	}
+
 
 	#header {
 		box-sizing : border-box;
@@ -7801,23 +7866,35 @@ span.halffixedflex,
 	}
 
 	#toprow a.fa {
-		font-size: 16px;
+		font-size  : 20px;
+		margin-top : 0px;
+		padding    : 6px;
+	}
+
+	span.searchfilter {
+		display : none;
+	}
+
+	#toprow a#mobile_search {
+		display: inline-block;
 	}
 
 	#toprow a.fa.smaller, #toprow a.fa.fa-sm {
-		font-size   : 14px;
-		line-height : 24px;
-		margin-top  : 0px;
+		font-size   : 16px;
 	}
 
+	#toprow a#tabroom_inbox {
+		padding       : 6px;
+		width         : auto;
+		height        : auto;
+		padding-right : 2px;
+	}
+
+
 	#toprow #helpbutton a {
-		font-size   : 1.4em;
-		margin      : 0;
-		margin-left : 4px;
-		padding     : 4px;
-		height      : auto;
-		width       : auto;
-		border-left : none;
+		padding   : 4px;
+		width     : auto;
+		height    : auto;
 	}
 
 	#menus {
@@ -7832,9 +7909,9 @@ span.halffixedflex,
 
 	#nav {
 		display         : flex;
-		width           : 98%;
+		width           : 100%;
 		align-items     : center;
-		justify-content : stretch;
+		justify-content : center;
 		margin          : auto;
 		list-style      : none;
 		z-index         : 500;
@@ -7909,10 +7986,6 @@ span.halffixedflex,
 	}
 }
 
-#mobile_search {
-	display: none;
-}
-
 .onlysmall,
 .hamburger {
 	display: none;
@@ -7923,7 +7996,20 @@ span.halffixedflex,
 	flex-flow  : row-reverse;
 }
 
-@media only screen and (max-width: 600px) {
+
+@media only screen and (max-width: 700px) {
+
+	#toprow a#push-bell.redtext, #toprow a#push-bell.redtext:hover {
+		border-width : 2px;
+		padding-top  : 4px;
+		font-size    : 14pt !important;
+		height       : auto;
+		width        : auto;
+	}
+
+	#nav {
+		justify-content : start;
+	}
 
 	#menus {
 		text-align : center;
@@ -7981,8 +8067,11 @@ span.halffixedflex,
 		display: none;
 	}
 
-	.searchfilter {
+	span.searchfilter {
 		display: none;
+	}
+	#toprow a#mobile_search {
+		display: inline-block;
 	}
 
 	#nav li a.top_link {
@@ -8006,8 +8095,12 @@ span.halffixedflex,
 		font-size : 16px;
 	}
 
-	#mobile_search {
-		display: block;
+	#toprow a#mobile_search {
+		display: inline-block;
+	}
+
+	span.searchfilter {
+		display: none;
 	}
 
 	#search {
