fixed the responsive

--- a/web/lib/css/tabroom.css
+++ b/web/lib/css/tabroom.css
@@ -3477,11 +3477,17 @@ a.printbutton.buttonwhite {
 
 .tabad_carousel {
 	float            : left;
-	width            : 75%;
+	width            : 77%;
 	background-color : var(--neutral-gray);
 	margin           : 0;
 	padding          : 0;
-	max-height       : 104px;
+}
+
+.tabad_carousel img {
+	padding-top    : 4px;
+	padding-bottom : 4px;
+	width          : 100%;
+	height         : auto;
 }
 
 .tabad_full {
@@ -3499,6 +3505,10 @@ a.printbutton.buttonwhite {
 	text-align      : center;
 }
 
+.slick-slide {
+	min-height: 108px;
+}
+
 .slick-current {
 	width : 100% !important;
 }
@@ -3507,7 +3517,6 @@ a.printbutton.buttonwhite {
 .carousel.row.even,
 .carousel.row.odd {
 	display          : inline-block;
-	height           : 100px;
 	margin           : 0;
 	vertical-align   : top;
 	background-color : transparent;
@@ -3518,12 +3527,11 @@ a.printbutton.buttonwhite {
 	margin   : 0;
 	padding  : 0;
 	overflow : hidden;
-	height   : 100px;
+	height   : auto;
 }
 
 .slick-list {
 	overflow : hidden;
-	height   : 100px;
 }
 
 .ad_image {
@@ -7457,6 +7465,10 @@ span.halffixedflex,
 		max-width : 1250px;
 	}
 
+	.tabad_carousel {
+		width: 72%;
+	}
+
 	.main {
 		width: 72%;
 	}
@@ -7568,35 +7580,6 @@ span.halffixedflex,
 		max-height : 100%;
 	}
 
-	.tabad_carousel {
-		float            : left;
-		width            : 71%;
-		background-color : var(--neutral-gray);
-		padding          : 0;
-		margin           : 0;
-		max-height       : 104px;
-	}
-
-	.tabad_full {
-		float      : none;
-		text-align : center;
-		max-width  : 100%;
-	}
-
-	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
-	}
-
-	.mainfull {
-		float : none;
-		width : 97%;
-	}
-
 	#content {
 		display          : block;
 		position         : relative;
@@ -7606,30 +7589,16 @@ span.halffixedflex,
 		padding          : 0;
 	}
 
+	.tabad_carousel {
+		width: 72%;
+	}
+
 	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
-	}
-
-	.mainfull {
-		float : none;
-		width : 96%;
+		width: 72%;
 	}
 
 	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
-	}
-
-	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
+		width: 28%;
 	}
 
 	#wrapper {
@@ -7701,7 +7670,6 @@ span.halffixedflex,
 		line-height      : 9pt;
 	}
 
-
 	table: {
 		width : 100%;
 	}
@@ -7748,7 +7716,6 @@ span.halffixedflex,
 		align-items : center;
 	}
 
-
 	#header {
 		box-sizing : border-box;
 		width      : 98%;
@@ -7781,14 +7748,16 @@ span.halffixedflex,
 		max-height : 100%;
 	}
 
-	.tabad_carousel {
-		float            : left;
-		width            : 67%;
-		background-color : var(--neutral--gray);
-		padding-left     : 2%;
-		padding-right    : 2%;
-		margin           : 0;
-		height           : 104px;
+	.slick-slide {
+		min-height     : 92px;
+		vertical-align : middle;
+	}
+
+	.slick-slide .carousel {
+		padding-top    : 1px;
+		padding-bottom : 1px;
+		min-height     : 92px;
+		vertical-align : middle;
 	}
 
 	.tabad_full {
@@ -7804,24 +7773,13 @@ span.halffixedflex,
 		padding          : 0;
 	}
 
-	.main {
-		min-height       : 600px;
-		width            : 69%;
-		padding-bottom   : 42px;
-		background-color : var(--background-white);
-		padding          : 1%;
-		float            : left;
+	.tabad_carousel {
+		height : auto;
 	}
 
-	.mainfull {
-		float : none;
-		width : 96%;
-	}
-
-	.menu {
-		width : 28%;
-		float : right;
-		padding: .5%;
+	.tabad_carousel img {
+		width: 100%;
+		height: auto;
 	}
 
 	#wrapper {
@@ -8164,9 +8122,14 @@ span.halffixedflex,
 		height  : auto;
 	}
 
+	h1 {
+		font-size: 2em;
+	}
+
 	.tabad_carousel img {
-		width: 100%;
-		height: auto;
+		top    : -15px;
+		width  : 100%;
+		height : auto;
 	}
 
 	.carousel.row,
@@ -8174,7 +8137,7 @@ span.halffixedflex,
 	.carousel.row.odd,
 	.carousel.row a {
 		height: auto;
-		padding: none;
+		padding: 0;
 	}
 
 	.carousel.row {
@@ -8213,18 +8176,28 @@ span.halffixedflex,
 	}
 
 	.slick-slide {
-		margin-top  : -12px;
-		height      : auto;
-		padding-top : 0px;
+		min-height     : 72px;
+		vertical-align : middle;
+		height         : auto;
+		padding-top    : 0px;
 	}
 
-	.slick-track {
-		margin-top : 22px;
+	.slick-slide .carousel {
+		padding-top    : 1px;
+		padding-bottom : 1px;
+		min-height     : 72px;
+		vertical-align : middle;
 	}
 
 	.flexrow.menuright {
 		text-align: left;
 		flex-flow  : row;
+	}
+
+	.tabad_carousel img {
+		top    : -15px;
+		width  : 100%;
+		height : auto;
 	}
 }
 
